2015-10-28  Uwe Schulzweida

	* using CDI library version 1.7.0
	* Version 1.7.0 released

2015-08-05  Uwe Schulzweida

	* ap2pl: changed to generalized height

2015-07-27  Uwe Schulzweida

	* removed configure option --with-jasper
	* remapnn/dis: replaced scrip search by kdtree

2015-07-23  Uwe Schulzweida

	* changed option --history to --no_history

2015-07-21  Uwe Schulzweida

	* tinfo: optimize calculation of monthly and yearly increment

2015-07-16  Uwe Schulzweida

	* collgrid: added support for curvilinear grids

2015-06-27  Uwe Schulzweida

	* New operator: setmisstonn - Set missing value to nearest neightbour

2015-06-26  Uwe Schulzweida

	* remapdis: fixed seg fault on blizzard with large target grid (possibly compiler bug)

2015-06-21  Uwe Schulzweida

	* topo, temp, mask: added optional parameter for target grid

2015-06-19  Uwe Schulzweida

        * for: added docu

2015-06-18  Uwe Schulzweida

	* Ydrunstat: don't set the year to the minimum of years found on output timestep
	* Ydaystat: set the year to the minimum of years found on output timestep

2015-06-17  Uwe Schulzweida

	* bug fix if table filename is a directory [Bug #5891]

2015-06-12  Uwe Schulzweida

	* diff: disable checkrel

2015-06-10  Karl-Hermann Wieners

	* expr: operators return 0 for arithmetics on constants [Bug #5875]

2015-06-03  Uwe Schulzweida

	* removed flag CMP_CODE
	* replace: compare only parameter name; removed check of parameter number
	* setpartabn: replace vlistDefVarCode() by vlistDefVarParam()

2015-06-01  Uwe Schulzweida

	* vertvar, vertstd: changed to weighted var/std if layer bounds are available

2015-05-29  Uwe Schulzweida

	* yseaspctl: check of verification date failed [Bug #5810]

2015-05-28  Uwe Schulzweida

	* Remap: fixed memory leak for r=max_remaps-1

2015-05-26  Uwe Schulzweida

	* New operator: vertstd1  - Vertical standard deviation [Divisor is (n-1)]
	* New operator: vertvar1  - Vertical variance [Divisor is (n-1)]