@@ -137,6 +137,24 @@ void farinv(field_t *field)
 }
 
 
+void farround(field_t *field)
+{
+  int    grid     = field->grid;
+  double missval1 = field->missval;
+  double missval2 = field->missval;
+  double *array   = field->ptr;
+
+  int len = gridInqSize(grid);
+
+  for ( int i = 0; i < len; i++ ) 
+    array[i] = round(array[i]);
+
+  field->nmiss = 0;
+  for ( int i = 0; i < len; i++ )
+    if ( DBL_IS_EQUAL(array[i], missval1) ) field->nmiss++;
+}
+
+
 void farmod(field_t *field, double divisor)
 {
   int i, len;
