@@ -3,6 +3,10 @@
 	* using CDI library version 1.7.0
 	* Version 1.7.0 released
 
+2015-08-08  Uwe Schulzweida
+
+        * replaced farcmul(array, 1./nsets) by farcdiv(array, (double)nsets) to get exactly the same result with and without missvals 
+
 2015-08-05  Uwe Schulzweida
 
 	* ap2pl: changed to generalized height
